fix layout and dark mode

--- a/app/src/style/globals.css
+++ b/app/src/style/globals.css
@@ -22,11 +22,11 @@ body {
 
 @layer components {
   .btn {
-    @apply px-5 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900;
+    @apply px-5 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-900;
   }
 
   .input {
-    @apply py-3 px-4 block w-full border-gray-200 shadow-sm rounded-md text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-200 dark:border-neutral-700 dark:text-neutral-700 dark:placeholder-neutral-500 dark:focus:ring-neutral-600
+    @apply py-3 px-4 block w-full shadow-sm rounded-md text-sm relative focus:z-10 focus:border-blue-500 disabled:opacity-50 disabled:pointer-events-none bg-neutral-200 border-neutral-700 text-neutral-700 placeholder-neutral-500 focus:ring-neutral-600
   }
 }
 
